--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/aos": "^3.0.7",
         "@types/node": "^22.13.5",
+        "aos": "^2.3.4",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
